fix: prize name overflow

--- a/src/components/styles/Prizes.scss
+++ b/src/components/styles/Prizes.scss
@@ -44,10 +44,6 @@
       box-sizing: border-box;
       flex-shrink: 0;
 
-      color: var(--Color-Primary, #343C54);
-      font-size: 22px;
-      font-weight: 700;
-
       display: grid;
       grid-template-columns: auto 1fr;
       grid-template-rows: 1fr 1fr;
@@ -55,7 +51,6 @@
 
       &:hover {
         background: color.change($color-secondary, $alpha: 0.1);
-        box-shadow: 0px 5px 15px 0px rgba(0, 120, 230, 0.10);
       }
 
       &-image {
@@ -72,6 +67,16 @@
         width: fit-content;
         height: fit-content;
         align-self: end;
+      }
+
+      &-name {
+        color: $color-primary;
+        font-size: 22px;
+        font-weight: 700;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
+
       }
     }
   }
